--- a/PycharmProjects/Airbnb-Lite/Airbnblite/templates/host.html
+++ b/PycharmProjects/Airbnb-Lite/Airbnblite/templates/host.html
@@ -3,6 +3,9 @@
    <div class="content-section">
        <legend class="border-bottom mb-4">Become an Airbnb-Lite host today!</legend>
 
-       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become a host</button>
+       <form action="/host/becomehost" method="post">
+           <button name="hostBtn" type="submit">Become a host</button>
+       </form>
+
    </div>
 {% endblock content %}
