--- a/PycharmProjects/Airbnb-Lite/Airbnblite/templates/index.html
+++ b/PycharmProjects/Airbnb-Lite/Airbnblite/templates/index.html
@@ -35,14 +35,14 @@
         <!-- Navbar Right Side -->
         <form class="navbar-nav">
           {% if current_user.is_authenticated %}
-            {% if current_user.host.data %}
-            <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
-            <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
-            <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+            {% if current_user.host %}
+              <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
+              <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+              <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
             {% else %}
-            <a class="nav-item nav-link" href="{{ url_for('host') }}">Become a host</a>
-            <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
-            <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+              <a class="nav-item nav-link" href="{{ url_for('host') }}">Become a host</a>
+              <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+              <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
             {% endif %}
           {% else %}
             <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
@@ -54,21 +54,24 @@
 
     <main role="main" class="container">
 
+      {{current_user.username}}
+      {{current_user.email}}
+      {{current_user.host}}
+      <div class="row">
+        <div class="col-md-8">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                {% for category, message in messages %}
+                  <div class="alert alert-{{ category }}">
+                    {{ message }}
+                  </div>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
 
-      <div class="col-md-8">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-              {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                  {{ message }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          {% endwith %}
-
-        {% block content %}{% endblock %}
+          {% block content %}{% endblock %}
+        </div>
       </div>
-
 
 
 
