--- a/PycharmProjects/Airbnb-Lite/Airbnblite/templates/host.html
+++ b/PycharmProjects/Airbnb-Lite/Airbnblite/templates/host.html
@@ -3,9 +3,7 @@
    <div class="content-section">
        <legend class="border-bottom mb-4">Become an Airbnb-Lite host today!</legend>
 
-       <form action="/host/becomehost" method="post">
-           <button name="hostBtn" type="submit">Become a host</button>
-       </form>
+       <a class="btn btn-primary btn-lg mt-1 mb-1" href="{{ url_for('becomeHost') }}">Become a host</a>
 
    </div>
 {% endblock content %}
